--- a/app/src/main/res/layout/activity_view_contact.xml
+++ b/app/src/main/res/layout/activity_view_contact.xml
@@ -1,45 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="3"
     tools:context=".ui.ViewContactActivity">
 
     <ImageView
         android:id="@+id/view_contact_image"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:adjustViewBounds="true"
-        android:layout_weight="2"
-        android:transitionName="UserImage"
         android:contentDescription="@string/contact_image"
+        android:transitionName="UserImage"
+        app:layout_constraintBottom_toTopOf="@+id/view_contact_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/ic_launcher_background"
         tools:targetApi="lollipop" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:id="@+id/fab_favourite"
+        android:src="@drawable/selector_bookmark"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toTopOf="@id/view_contact_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_contact_image" />
+
     <TextView
         android:id="@+id/view_contact_name"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="237dp"
         android:drawableStart="@drawable/ic_person_black"
-        android:textSize="20sp"
         android:drawableLeft="@drawable/ic_person_black"
         android:drawablePadding="16dp"
-        android:textColor="@color/colorBlack"
-        tools:text="Deepak Kumar" />
-
-    <TextView
-        android:id="@+id/view_contact_phone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:drawableStart="@drawable/ic_call_black"
-        android:drawableLeft="@drawable/ic_call_black"
-        android:drawablePadding="16dp"
+        android:padding="8dp"
         android:textColor="@color/colorBlack"
         android:textSize="20sp"
-        tools:text="+91 1234567890" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_contact_image"
+        tools:text="Deepak Kumar" />
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/linear_mobiles"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_contact_name">
+
+    </LinearLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
