--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    app:layout_constraintDimensionRatio="H,1.1:1">
+    app:layout_constraintDimensionRatio="1:1">
 
     <ImageView
         android:id="@+id/contact_image"
@@ -14,9 +14,8 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:transitionName="UserImage"
         android:src="@drawable/ic_person"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:transitionName="UserImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -32,17 +31,9 @@
         android:drawableRight="@drawable/ic_arrow_right"
         android:padding="8dp"
         android:textColor="@color/colorWhite"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="Contact Name" />
-
-    <TextView
-        android:id="@+id/contact_mobile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/contact_image"
         tools:text="Contact Name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
