--- a/app/src/main/res/drawable/ic_call_made.xml
+++ b/app/src/main/res/drawable/ic_call_made.xml
@@ -1,9 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="16dp"
+    android:height="16dp"
+    android:tint="@android:color/holo_green_light"
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z" />
+        android:pathData="M9,5v2h6.59L4,18.59 5.41,20 17,8.41V15h2V5z" />
 </vector>
