--- a/app/src/main/res/layout/activity_view_contact.xml
+++ b/app/src/main/res/layout/activity_view_contact.xml
@@ -19,7 +19,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_launcher_background"
+        tools:src="@drawable/ic_launcher_foreground"
         tools:targetApi="lollipop" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -29,6 +29,7 @@
         android:id="@+id/fab_favourite"
         android:src="@drawable/selector_bookmark"
         app:fabSize="normal"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/view_contact_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view_contact_image" />
@@ -41,7 +42,6 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="237dp"
         android:drawableStart="@drawable/ic_person_black"
         android:drawableLeft="@drawable/ic_person_black"
         android:drawablePadding="16dp"
